# tomographer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.html  README-checkpoint.md  Untitled-checkpoint.ipynb  __init__-checkpoint.py  conf-checkpoint.ini  filepath-checkpoint.py  pyproject-checkpoint.toml  setup-checkpoint.py  tomo-checkpoint.ipynb  tomo_utils-checkpoint.py
.virtual_documents/tomographer/runtime_script/: tomo.ipynb
.virtual_documents/tomographer/test/: analysis.ipynb  tomo.ipynb
tomographer/precalculated_data/bootstrapping/: N_repeat_block_ID_1000BS_default_valid_pixels_flatten.npy  N_repeat_block_ID_100BS_default_valid_pixels_flatten.npy
tomographer/precalculated_data/masks/: CSFD_cosmology_area.fits  LMC_SMC_veto.fits  Planck_point_source_veto.fits  SDSS_veto.fits  fsky_25_low_dust.fits  fsky_50_low_dust.fits  fsky_75_low_dust.fits  globular_clusters_veto.fits  nearby_galaxy_clusters_veto.fits
tomographer/precalculated_data/references/: sdss_ref_all.fits
tomographer/precalculated_data/templates/: CSFD_ebv_ns2048_nest.fits  NHI_ns2048_nest.fits
tomographer/runtime_demo/intensity_map/: conf.ini
tomographer/runtime_demo/source_catalog/: conf.ini
tomographer/runtime_script/: .fits  .ini  conf.ini  tomo.ipynb  tomo.py  tomo_utils.py
tomographer/runtime_script/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  conf-checkpoint.ini  tomo-checkpoint.ipynb  tomo-checkpoint.py  tomo_simple-checkpoint.py  tomo_test-checkpoint.py  tomo_utils-checkpoint.py
(+15 files in other folders)
