[project]
name = "tomographer"
version = "0.1.0"
authors = [
  {name = "Yi-Kuan Chiang", email = "ykchiang@asiaa.sinica.edu.tw"},
  {name = "Yu Voon Ng", email = "yuvoonng@gmail.com"}
]
description = "Redshift Distribution Inference for Source Catalogs and Intensity Maps"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "numpy",
    "numexpr",
    "healpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "astropy>=7.2.0",
    "psutil",
    "tomli_w",
    "pyarrow",
    "nest_asyncio",
    "aiohttp",
    "tqdm",
    "multiprocess",
    "ipywidgets"
]

[project.scripts]
tomo = "tomographer.runtime_script.tomo:main"

[tool.setuptools.packages.find]
where = ["."]  
include = ["tomographer*"] 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
